Op 173 vezo 4 new dicom features (#84)
* First version of JPEG compatibility in DICOM module
* Added new Dialog upon dicom/images loading
* Added Dicom Type gui with translations
* Linked DicomType to gui

TODO:
- possibility to add images to the same series
- handle big size images (IndexOutOfBoundsException

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -329,6 +329,11 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicomtype.codem                                                            = الرمز
+angal.dicomtype.deleterow                                                        = حذف الصف
+angal.dicomtype.pleaseinsertacode                                                = الرجاء إدخال الرمز
+angal.dicomtype.pleaseinsertavaliddescription                                    = يرجى إدراج وصف صالح
+angal.dicomtype.youcannotdeletethisrecord                                        = لا يمكنك حذف هذا السجل
 angal.disctype.codem                                                             = الرمز
 angal.disctype.codemaxchars                                                      = الرمز (حد أقصى عشره أحرف)
 angal.disctype.codetoolongmaxchars                                               = رمز طويل جدا (حد أقصى عشرة احرف )
