--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -22,6 +22,7 @@ angal.admission.bloodtypeis                                                     
 angal.admission.bloodtypeisunknown                                               = sconosciuto
 angal.admission.cannotmergeadmittedpatients                                      = Non è possibile unire pazienti ricoverati
 angal.admission.cannotmergewithpendingbills                                      = Unione non possibile con fatture in sospeso
+angal.admission.check.operationdate                                              = Per favore, controlla la data della/delle operazione/i
 angal.admission.city                                                             = Città
 angal.admission.continue                                                         = Continuare?
 angal.admission.controldaten2controldaten1notfound                               = Data controllo n.2 : data controllo n.1 non trovata
@@ -69,6 +70,7 @@ angal.admission.ininserteddatepatientwasalreadyadmitted                         
 angal.admission.insurance                                                        = Assicurazione
 angal.admission.intheselecteddatepatientwasadmittedagain                         = alla data selezionata il paziente è stato ricoverato di nuovo, prego inserire una data dimissione valida
 angal.admission.invalidadmissionperiod                                           = periodo di ricovero non valido:
+angal.admission.invalidoperationdate                                             = Data di funzionamento non valida:
 angal.admission.levelis                                                          = Il livello è
 angal.admission.levelisunknown                                                   = Livello sconosciuto
 angal.admission.male                                                             = Maschio
@@ -167,6 +169,8 @@ angal.admission.stop                                                            
 angal.admission.taxcode                                                          = Codice Fiscale
 angal.admission.telephone                                                        = Telefono
 angal.admission.theadmissionbetween                                              = il ricovero tra  \n
+angal.admission.theoperationdatebetween                                          = la data di operazione deve essere compresa tra
+angal.admission.theoperationdatenewerthan                                        = la data di operazione deve essere più recente di
 angal.admission.thepatientwasnotyetbornatselecteddate                            = Il paziente non era ancora nato alla data selezionata!!!
 angal.admission.therapy                                                          = Terapia
 angal.admission.thereismorethanonependingbillforthispatientcontinue              = C'è più di un fattura in sospeso per questo paziente, continuare?
@@ -190,10 +194,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = verrà eliminato ed il suo storico trasferito al Paziente
 angal.admission.withthisoperationthepatient                                      = Con questa operazione il Paziente
 angal.admission.youareeditinganoldadmission                                      = Stai modificando un vecchio ricovero
-angal.admission.check.operationdate                                               = Per favore, controlla la data della/delle operazione/i
-angal.admission.invalidoperationdate                                             = Data di funzionamento non valida:
-angal.admission.theoperationdatebetween                                          = la data di operazione deve essere compresa tra
-angal.admission.theoperationdatenewerthan                                        = la data di operazione deve essere più recente di
 angal.admtype.admissiontypebrowsing                                              = Lista tipologie ricovero
 angal.admtype.codemaxchars                                                       = Codice (max 10 caratteri)
 angal.admtype.codetoolongmaxchars                                                = Codice troppo lungo (max 10 caratteri)
@@ -322,16 +322,28 @@ angal.dicom.image.zoom                                                          
 angal.dicom.load.err                                                             = Il file non è in formato DICOM
 angal.dicom.load.txt                                                             = Carica DICOM
 angal.dicom.loading                                                              = Caricamento...
+angal.dicom.manager.err                                                          = Errore Generico
 angal.dicom.noconn                                                               = Impossibile stabilire la connessione con il database
 angal.dicom.nofile                                                               = File di configurazione non trovato
 angal.dicom.open.txt                                                             = Apri DICOM
 angal.dicom.thumbnail.age                                                        = Età
+angal.dicom.thumbnail.category                                                   = Tipologia
 angal.dicom.thumbnail.modality                                                   = Modalità
 angal.dicom.thumbnail.patient                                                    = PAZIENTE
 angal.dicom.thumbnail.series                                                     = Serie
 angal.dicom.thumbnail.sernum                                                     = Numero serie
 angal.dicom.thumbnail.study                                                      = Studio
 angal.dicom.title                                                                = Visualizzatore DICOM
+angal.dicomtype.codem                                                            = Codice
+angal.dicomtype.codemaxchars                                                     = Codice (max 3 caratteri)
+angal.dicomtype.codetoolongmaxchars                                              = Codice troppo lungo (max 3 caratteri)
+angal.dicomtype.deleterow                                                        = Elimina Riga
+angal.dicomtype.dicomtypebrowsing                                                = Lista tipologie DICOM
+angal.dicomtype.editingdicomtyperecord                                           = Modifica voce tipologia DICOM
+angal.dicomtype.newdicomtyperecord                                               = Nuova voce di tipologia DICOM
+angal.dicomtype.pleaseinsertacode                                                = Prego inserire un codice
+angal.dicomtype.pleaseinsertavaliddescription                                    = Prego inserire una descrizione valida
+angal.dicomtype.youcannotdeletethisrecord                                        = Non puoi eliminare questo record
 angal.disctype.codem                                                             = Codice
 angal.disctype.codemaxchars                                                      = Codice (max 10 caratteri)
 angal.disctype.codetoolongmaxchars                                               = Codice troppo lungo (max 10 caratteri)
@@ -901,6 +913,7 @@ angal.menu.btn.chat                                                             
 angal.menu.btn.deliverytype                                                      = Tipologie Parto
 angal.menu.btn.delresulttype                                                     = Tipologie Esito Parto
 angal.menu.btn.dicom                                                             = DICOM
+angal.menu.btn.dicomtype                                                         = Tipologia Dicom
 angal.menu.btn.disctype                                                          = Tipologie Dimissioni
 angal.menu.btn.disease                                                           = Malattie
 angal.menu.btn.diseaselist                                                       = Lista Malattie
@@ -958,6 +971,7 @@ angal.menu.deliverytype                                                         
 angal.menu.delresulttype                                                         = Tipologie Esito Parto
 angal.menu.descm                                                                 = DESCRIZ.
 angal.menu.dicom                                                                 = DICOM
+angal.menu.dicomtype                                                             = Tipologia Dicom
 angal.menu.disctype                                                              = Tipologie Dimissioni
 angal.menu.disease                                                               = Malattie
 angal.menu.diseaselist                                                           = Lista Malattie
