--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -329,6 +329,13 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Número de série
 angal.dicom.thumbnail.study                                                      = Estudo
 angal.dicom.title                                                                = Visualizador DICOM
+angal.dicomtype.codem                                                            = Código
+angal.dicomtype.codemaxchars                                                     = Código (max 3 dígitos)
+angal.dicomtype.codetoolongmaxchars                                              = Código demasiado longo (max 3 dígitos)
+angal.dicomtype.deleterow                                                        = Apagar fila
+angal.dicomtype.pleaseinsertacode                                                = Insira o código
+angal.dicomtype.pleaseinsertavaliddescription                                    = Insira por favor uma descrição válida
+angal.dicomtype.youcannotdeletethisrecord                                        = Não pode apagar este registo
 angal.disctype.codem                                                             = Código
 angal.disctype.codemaxchars                                                      = Código (max 10 dígitos)
 angal.disctype.codetoolongmaxchars                                               = Código demasiado longo (max 10 dígitos)
