--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -329,6 +329,13 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Namba ya mfululizo Series number
 angal.dicom.thumbnail.study                                                      = Idara
 angal.dicom.title                                                                = Mtazamaji wa DICOM
+angal.dicomtype.codem                                                            = Ishara
+angal.dicomtype.codemaxchars                                                     = Ishara (upeo wa herufi 3)
+angal.dicomtype.codetoolongmaxchars                                              = Ishara ni ndefu sana (upeo wa herufi 3)
+angal.dicomtype.deleterow                                                        = Futa msururu
+angal.dicomtype.pleaseinsertacode                                                = Tafadhali weka ishara
+angal.dicomtype.pleaseinsertavaliddescription                                    = tafadhali weka elezo sahihi
+angal.dicomtype.youcannotdeletethisrecord                                        = Huwezi futa rekodi hizi
 angal.disctype.codem                                                             = Ishara
 angal.disctype.codemaxchars                                                      = Ishara(upeo wa herufi 10)
 angal.disctype.codetoolongmaxchars                                               = Ishara ni ndefu sana (upeo wa herufi 10)
