--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -22,6 +22,7 @@ angal.admission.bloodtypeis                                                     
 angal.admission.bloodtypeisunknown                                               = unknown
 angal.admission.cannotmergeadmittedpatients                                      = Cannot merge admitted patients
 angal.admission.cannotmergewithpendingbills                                      = Cannot merge with pending bills
+angal.admission.check.operationdate                                              = Please check the operations dates
 angal.admission.city                                                             = City
 angal.admission.continue                                                         = Continue?
 angal.admission.controldaten2controldaten1notfound                               = Control date n.2: control date n.1 not found
@@ -69,6 +70,7 @@ angal.admission.ininserteddatepatientwasalreadyadmitted                         
 angal.admission.insurance                                                        = Insurance
 angal.admission.intheselecteddatepatientwasadmittedagain                         = in the selected date patient was admitted again, please insert a valid discharge date
 angal.admission.invalidadmissionperiod                                           = invalid admission period:  
+angal.admission.invalidoperationdate                                             = Invalid operation date:
 angal.admission.levelis                                                          = Level is 
 angal.admission.levelisunknown                                                   = Level is unknown
 angal.admission.male                                                             = Male
@@ -167,6 +169,8 @@ angal.admission.stop                                                            
 angal.admission.taxcode                                                          = Tax Number ID
 angal.admission.telephone                                                        = Telephone
 angal.admission.theadmissionbetween                                              = the admission between  \n
+angal.admission.theoperationdatebetween                                          = the operation date must be between
+angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admission.thepatientwasnotyetbornatselecteddate                            = The patient was not yet born at selected date!!!
 angal.admission.therapy                                                          = Therapy
 angal.admission.thereismorethanonependingbillforthispatientcontinue              = There is more than one pending bill for this patient, continue?
@@ -190,10 +194,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = will be deleted and his/her history transfered to the Patient
 angal.admission.withthisoperationthepatient                                      = With this operation the Patient
 angal.admission.youareeditinganoldadmission                                      = You are editing an old admission
-angal.admission.check.operationdate                                               = Please check the operations dates
-angal.admission.invalidoperationdate                                             = Invalid operation date:
-angal.admission.theoperationdatebetween                                          = the operation date must be between
-angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admtype.admissiontypebrowsing                                              = Admission type browsing
 angal.admtype.codemaxchars                                                       = Code (max 10 chars)
 angal.admtype.codetoolongmaxchars                                                = Code too long (max 10 chars)
@@ -322,16 +322,28 @@ angal.dicom.image.zoom                                                          
 angal.dicom.load.err                                                             = The file is not in DICOM format
 angal.dicom.load.txt                                                             = Load DICOM
 angal.dicom.loading                                                              = Loading...
+angal.dicom.manager.err                                                          = Generic Error
 angal.dicom.noconn                                                               = Unable to establish connection to the database
 angal.dicom.nofile                                                               = Configuration file not found
 angal.dicom.open.txt                                                             = Open DICOM
 angal.dicom.thumbnail.age                                                        = Age
+angal.dicom.thumbnail.category                                                   = Category
 angal.dicom.thumbnail.modality                                                   = Modality
 angal.dicom.thumbnail.patient                                                    = Patient
 angal.dicom.thumbnail.series                                                     = Series
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicom.title                                                                = DICOM Viewer
+angal.dicomtype.codem                                                            = Code
+angal.dicomtype.codemaxchars                                                     = Code (max 3 chars)
+angal.dicomtype.codetoolongmaxchars                                              = Code too long (max 3 chars)
+angal.dicomtype.deleterow                                                        = Delete row
+angal.dicomtype.dicomtypebrowsing                                                = Dicom type browsing
+angal.dicomtype.editingdicomtyperecord                                           = Editing Dicom Type record
+angal.dicomtype.newdicomtyperecord                                               = New Dicom type record
+angal.dicomtype.pleaseinsertacode                                                = Please insert a code
+angal.dicomtype.pleaseinsertavaliddescription                                    = Please insert a valid description
+angal.dicomtype.youcannotdeletethisrecord                                        = You can not delete this record
 angal.disctype.codem                                                             = Code
 angal.disctype.codemaxchars                                                      = Code (max 10 chars)
 angal.disctype.codetoolongmaxchars                                               = Code too long (max 10 chars)
@@ -901,6 +913,7 @@ angal.menu.btn.chat                                                             
 angal.menu.btn.deliverytype                                                      = Delivery Type
 angal.menu.btn.delresulttype                                                     = Delivery Result Type
 angal.menu.btn.dicom                                                             = DICOM Patient
+angal.menu.btn.dicomtype                                                         = Dicom Type
 angal.menu.btn.disctype                                                          = Discharge Type
 angal.menu.btn.disease                                                           = Disease
 angal.menu.btn.diseaselist                                                       = Disease List
@@ -958,6 +971,7 @@ angal.menu.deliverytype                                                         
 angal.menu.delresulttype                                                         = DeliveryResult
 angal.menu.descm                                                                 = DESC
 angal.menu.dicom                                                                 = DICOM Patient
+angal.menu.dicomtype                                                             = Dicom Type
 angal.menu.disctype                                                              = Discharge Type
 angal.menu.disease                                                               = Disease
 angal.menu.diseaselist                                                           = DiseaseList
@@ -1151,8 +1165,10 @@ angal.opd.newattendance                                                         
 angal.opd.newopdregistration                                                     = New OPD registration
 angal.opd.newpatient                                                             = <enter a new patient>
 angal.opd.nextkin                                                                = Next Kin
+angal.opd.nextvisitdate                                                          = Next visit date
 angal.opd.nonote                                                                 = <none>
 angal.opd.noteandsymptom                                                         = Note & Symptom
+angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.opd.notspecified                                                           = not specified
 angal.opd.on                                                                     = on
 angal.opd.opdnumber                                                              = OPD No.
@@ -1180,8 +1196,6 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sex
 angal.opd.sexm                                                                   = SEX
 angal.opd.visitdate                                                              = Visit Date
-angal.opd.nextvisitdate                                                          = Next visit date
-angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.operation.allm                                                             = ALL
 angal.operation.codetoolongmaxchars                                              = Code too long (max 10 chars)
 angal.operation.deleteoperation                                                  = Delete operation
