OP-143: "patient profession" and "marital status" fields (#45)
* add marital status and profession fields

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -74,6 +74,8 @@ angal.admission.levelisunknown                                                  
 angal.admission.male                                                             = ذكر
 angal.admission.malnutrition                                                     = سوء التغذية
 angal.admission.malnutritioncontrol                                              = مكافحة سوء التغذية
+angal.admission.profession                                                       = المهنة
+angal.admission.maritalstatus                                                    = الحالة المدنية
 angal.admission.maternity                                                        = MATERNITY
 angal.admission.merge                                                            = دمج
 angal.admission.motherisalive                                                    = الأب على قيد الحياة
@@ -1208,6 +1210,25 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = تاريخ الميلاد
 angal.patient.bloodtype                                                          = فصيلة الدم
 angal.patient.bloodtype.unknown                                                  = غير معروف
+angal.patient.profession                                                         = المهنة
+angal.patient.profession.farming                                                 = زراعة
+angal.patient.profession.construction                                            = بناء
+angal.patient.profession.mining                                                  = تعدين
+angal.patient.profession.engineering                                             = هندسة
+angal.patient.profession.medicine                                                = طب
+angal.patient.profession.foodhospitality                                         = الغذاء والضيافة
+angal.patient.profession.homemaker                                               = ربة منزل
+angal.patient.profession.mechanic                                                = ميكانيكي
+angal.patient.profession.business                                                = أعمال
+angal.patient.profession.janitorial                                              = خدمات تنظيف
+angal.patient.profession.other                                                   = مهنة أخرى
+angal.patient.profession.unknown                                                 = غير معروف
+angal.patient.maritalstatus                                                      = الحالة المدنية
+angal.patient.maritalstatusunknown                                               = غير معروف
+angal.patient.maritalstatusdivorced                                              = مطلق 
+angal.patient.maritalstatuswidowed                                               = مترمل 
+angal.patient.maritalstatusmarried                                               = متزوج
+angal.patient.maritalstatussingle                                                = أعزب
 angal.patient.city                                                               = المدينة
 angal.patient.confirmage                                                         = تأكيد العمر؟
 angal.patient.confirmdeletion                                                    = تأكيد الحذف
