--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -75,6 +75,8 @@ angal.admission.male                                                            
 angal.admission.malnutrition                                                     = Malnutrition
 angal.admission.malnutritioncontrol                                              = Malnutrition control
 angal.admission.maternity                                                        = MATERNITY
+angal.admission.profession                                                       = Profession
+angal.admission.maritalstatus                                                    = Marital Status
 angal.admission.merge                                                            = Merge
 angal.admission.motherisalive                                                    = Mother is alive  
 angal.admission.motherisdead                                                     = Mother is dead 
@@ -1213,6 +1215,25 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = Birth Date
 angal.patient.bloodtype                                                          = Blood type
 angal.patient.bloodtype.unknown                                                  = Unknown
+angal.patient.profession                                                         = Profession
+angal.patient.profession.farming                                                 = Farming
+angal.patient.profession.construction                                            = Construction
+angal.patient.profession.mining                                                  = Mining
+angal.patient.profession.engineering                                             = Engineering
+angal.patient.profession.medicine                                                = Medicine
+angal.patient.profession.foodhospitality                                         = Food/Hospitality
+angal.patient.profession.homemaker                                               = Homemaker
+angal.patient.profession.mechanic                                                = Mechanic
+angal.patient.profession.business                                                = Business
+angal.patient.profession.janitorial                                              = Janitorial Services
+angal.patient.profession.other                                                   = Other
+angal.patient.profession.unknown                                                 = Unknown
+angal.patient.maritalstatus                                                      = Marital Status
+angal.patient.maritalstatusunknown                                               = Unknown
+angal.patient.maritalstatusdivorced                                              = Divorced
+angal.patient.maritalstatuswidowed                                               = Widowed
+angal.patient.maritalstatusmarried                                               = Married
+angal.patient.maritalstatussingle                                                = Single
 angal.patient.city                                                               = City
 angal.patient.confirmage                                                         = Confirm age?
 angal.patient.confirmdeletion                                                    = Confirm deletion
