Commit for issue OP-162 #comment Prototype for Pagination #time 2d #in-review Please review my work

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -264,6 +264,8 @@ angal.billbrowser.update                                                        
 angal.common.agepattern                                                          = {0}y {1}m {2}d
 angal.common.cancel                                                              = Cancel
 angal.common.close                                                               = Close
+angal.common.previouspage                                                        = Previous Page
+angal.common.nextpage                                                            = Next Page
 angal.common.code                                                                = Code
 angal.common.codealreadyinuse                                                    = Code already in use
 angal.common.codem                                                               = CODE
@@ -1094,6 +1096,7 @@ angal.opd.alltype                                                               
 angal.opd.attendancedate                                                         = Attendance Date
 angal.opd.city                                                                   = City
 angal.opd.count                                                                  = Count
+angal.opd.pagenumber                                                             = Page Number
 angal.opd.datefrom                                                               = DATE From:
 angal.opd.datefrommustbebefordateto                                              = 'Date from' must be lower than 'Date to'
 angal.opd.dateto                                                                 = DATE To:   
