--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -415,12 +415,17 @@ angal.examination.heightabbr                                                    
 angal.examination.note                                                           = Complain
 angal.examination.saturation                                                     = Saturation
 angal.examination.saturationabbr                                                 = O2
+angal.examination.respiratoryrate                                                = Respiratory Rate
+angal.examination.respiratoryrateabbr                                            = RR
+angal.examination.ausculation                                                    = Auscultation
+angal.examination.auscultationabbr                                               = AUSC
 angal.examination.temperature                                                    = Temperature
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
 angal.examination.tooltip.togglearterialpressureexamination                      = Enable / Disable examination Blood Pressure
 angal.examination.tooltip.toggleheartrateexamination                             = Enable / Disable examination Heart Rate
 angal.examination.tooltip.togglesaturationexamination                            = Enable / Disable examination Saturation
+angal.examination.tooltip.togglerespiratoryrateexamination                       = Enable / Disable examination Respiratory Rate
 angal.examination.tooltip.toggletemperatureexamination                           = Enable / Disable examination Temperature
 angal.examination.weight                                                         = Weight
 angal.examination.weightabbr                                                     = (W)
