Implemented auscultation and respiratory rate

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -417,8 +417,15 @@ angal.examination.saturation                                                    
 angal.examination.saturationabbr                                                 = O2
 angal.examination.respiratoryrate                                                = Respiratory Rate
 angal.examination.respiratoryrateabbr                                            = RR
-angal.examination.ausculation                                                    = Auscultation
+angal.examination.auscultation                                                   = Auscultation
 angal.examination.auscultationabbr                                               = AUSC
+angal.examination.auscultation.unknown                                           = Unknown
+angal.examination.auscultation.normal                                            = Normal(Vesicular)
+angal.examination.auscultation.wheezes                                           = Wheezes
+angal.examination.auscultation.rhonchi                                           = Rhonchi
+angal.examination.auscultation.crackles                                          = Crackles
+angal.examination.auscultation.stridor                                           = Stridor
+angal.examination.auscultation.bronchial                                         = Bronchial
 angal.examination.temperature                                                    = Temperature
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
@@ -426,6 +433,7 @@ angal.examination.tooltip.togglearterialpressureexamination                     
 angal.examination.tooltip.toggleheartrateexamination                             = Enable / Disable examination Heart Rate
 angal.examination.tooltip.togglesaturationexamination                            = Enable / Disable examination Saturation
 angal.examination.tooltip.togglerespiratoryrateexamination                       = Enable / Disable examination Respiratory Rate
+angal.examination.tooltip.toggleauscultationexamination                          = Enable / Disable examination Auscultation
 angal.examination.tooltip.toggletemperatureexamination                           = Enable / Disable examination Temperature
 angal.examination.weight                                                         = Weight
 angal.examination.weightabbr                                                     = (W)
