adding arabic support

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -412,6 +412,17 @@ angal.examination.heightabbr                                                    
 angal.examination.note                                                           = شكوى
 angal.examination.saturation                                                     = اشباع
 angal.examination.saturationabbr                                                 = O2
+angal.examination.respiratoryrate                                                = وتيرة التنفس
+angal.examination.respiratoryrateabbr                                            = RR
+angal.examination.auscultation                                                   = التسمع
+angal.examination.auscultationabbr                                               = AUSC
+angal.examination.auscultation.unknown                                           = غير معروف
+angal.examination.auscultation.normal                                            = طبيعي
+angal.examination.auscultation.wheezes                                           = أزيز
+angal.examination.auscultation.rhonchi                                           = غطائط
+angal.examination.auscultation.crackles                                          = كراكر
+angal.examination.auscultation.stridor                                           = صرير
+angal.examination.auscultation.bronchial                                         = برونكيال
 angal.examination.temperature                                                    = حرارة
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = احفظ اختبار المريض
