adding more arabic translations

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -429,6 +429,8 @@ angal.examination.tooltip.savepatientexamination                                
 angal.examination.tooltip.togglearterialpressureexamination                      = تفعيل  تعطيل اختبار ضغط الدم
 angal.examination.tooltip.toggleheartrateexamination                             = تفعيل  تعطيل اختبار نبض القلب
 angal.examination.tooltip.togglesaturationexamination                            = تفعيل  تعطيل اختبار الاشباع
+angal.examination.tooltip.togglerespiratoryrateexamination                       = تفعيل تعطيل اختبار وتيرة التنفس
+angal.examination.tooltip.toggleauscultationexamination                          = تفعيل تعطيل اختبار التسمع
 angal.examination.tooltip.toggletemperatureexamination                           = تفعيل  تعطيل اختبار الحرارة
 angal.examination.weight                                                         = الوزن
 angal.examination.weightabbr                                                     = (W)
