fixing all merge conflicts related to 1.10-pre

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -448,6 +448,7 @@ angal.examination.saturation                                                    
 angal.examination.saturationabbr                                                 = O2
 angal.examination.respiratoryrate                                                = وتيرة التنفس
 angal.examination.respiratoryrateabbr                                            = RR
+angal.examination.respiratoryrateunit                                            = bpm
 angal.examination.auscultation                                                   = التسمع
 angal.examination.auscultationabbr                                               = AUSC
 angal.examination.auscultation.unknown                                           = غير معروف
