--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -458,6 +458,7 @@ angal.examination.saturation                                                    
 angal.examination.saturationabbr                                                 = O2
 angal.examination.respiratoryrate                                                = Respiratory Rate
 angal.examination.respiratoryrateabbr                                            = RR
+angal.examination.respiratoryrateunit                                            = bpm
 angal.examination.auscultation                                                   = Auscultation
 angal.examination.auscultationabbr                                               = AUSC
 angal.examination.auscultation.unknown                                           = Unknown
