added AUTOMATICLOTWARD_TOWARD option and multiple discharge ward to

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -735,6 +735,7 @@ angal.medicalstock.multipledischarging.packets                                  
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Please insert a reference number
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = Insert a valid value
 angal.medicalstock.multipledischarging.pleaseselectaward                         = please select a ward
+angal.medicalstock.multipledischarging.pleaseselectpatient                         = please select a Patient
 angal.medicalstock.multipledischarging.preparationdate                           = Preparation Date:
 angal.medicalstock.multipledischarging.proceed                                   = , proceed?
 angal.medicalstock.multipledischarging.qty                                       = Qty
