update : - added go to date, button for create visits , button today etc

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1680,6 +1680,8 @@ angal.visit.reminderm                                                           
 angal.visit.visitfor                                                             = Visits for
 angal.visit.visittoday                                                           = Print this day's visits
 angal.visit.visittomorrow                                                        = Visits Tomorrow
+angal.visit.date                                                        		 = please insert a date
+angal.visit.ward                                                       			 = Please select a ward
 angal.ward.beds                                                                  = BEDS
 angal.ward.bedsedit                                                              = Number of beds *
 angal.ward.bedsnumbermustbepositive                                              = Beds number must be positive
