Added in Table OPERATION OPE_FOR- added differenziation operation for opd and admission

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -269,6 +269,7 @@ angal.common.code                                                               
 angal.common.codealreadyinuse                                                    = Code already in use
 angal.common.codem                                                               = CODE
 angal.common.codestar                                                            = Code *
+angal.common.operFor                                                           	 = Operation For
 angal.common.date                                                                = Date
 angal.common.datem                                                               = DATE
 angal.common.delete                                                              = Delete
