Changed one bundle and rearranged components
TODO: add more bundles to avoid coded labels

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -1193,6 +1193,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = الاسم
 angal.operation.newoperationrecord                                               = سجل عملية جديد
 angal.operation.operationalreadypresent                                          = عملية موجودة بالفعل
+angal.operation.operationcontext                                                 = السياق
 angal.operation.operationsbrowser                                                = متصفح العمليات
 angal.operation.pleaseinsertacode                                                = الرجاء إدخال الرمز
 angal.operation.pleaseinsertavaliddescription                                    = يرجى إدراج وصف صالح
