--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -1195,6 +1195,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NAME
 angal.operation.newoperationrecord                                               = Neuer OP Eintrag
 angal.operation.operationalreadypresent                                          = Eingriff bereits vorhanden
+angal.operation.operationcontext                                                 = Kontext
 angal.operation.operationsbrowser                                                = Liste der Eingriffe
 angal.operation.pleaseinsertacode                                                = Bitte geben Sie einen Code ein.
 angal.operation.pleaseinsertavaliddescription                                    = Bitte geben Sie eine gültige Beschreibung ein.
