--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -263,13 +263,11 @@ angal.billbrowser.todaym                                                        
 angal.billbrowser.update                                                         = Update
 angal.common.agepattern                                                          = {0}y {1}m {2}d
 angal.common.cancel                                                              = Cancel
-angal.common.print                                                               = Print
 angal.common.close                                                               = Close
 angal.common.code                                                                = Code
 angal.common.codealreadyinuse                                                    = Code already in use
 angal.common.codem                                                               = CODE
 angal.common.codestar                                                            = Code *
-angal.common.operFor                                                           	 = Operation For
 angal.common.date                                                                = Date
 angal.common.datem                                                               = DATE
 angal.common.delete                                                              = Delete
@@ -289,6 +287,7 @@ angal.common.notapplicable                                                      
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
 angal.common.pleaseselectarow                                                    = Please select a row
+angal.common.print                                                               = Print
 angal.common.quantity                                                            = Quantity
 angal.common.save                                                                = Save
 angal.common.savem                                                               = SAVE
@@ -1213,6 +1212,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NAME
 angal.operation.newoperationrecord                                               = New operation record
 angal.operation.operationalreadypresent                                          = Operation already present
+angal.operation.operationcontext                                                 = Context
 angal.operation.operationsbrowser                                                = Operations browser
 angal.operation.pleaseinsertacode                                                = Please insert a code
 angal.operation.pleaseinsertavaliddescription                                    = Please insert a valid description
@@ -1325,9 +1325,9 @@ angal.patient.unknown                                                           
 angal.patient.veryoldpatient                                                     = Very old patient
 angal.patient.yes                                                                = Yes
 angal.patientbill.find                                                           = Find
+angal.patientfolder.tab.drugs                                                    = Drugs
 angal.patientfolder.tab.exams                                                    = Exams
 angal.patientfolder.tab.operations                                               = Operations
-angal.patientfolder.tab.drugs													 = Drugs
 angal.patvac.age                                                                 = Age
 angal.patvac.agefrom                                                             = Age From:
 angal.patvac.agefrommustbelowerthanageto                                         = 'Age from' must be lower than 'Age to'
