--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1198,6 +1198,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NOMBRE
 angal.operation.newoperationrecord                                               = Nueva expresión  de Intervención
 angal.operation.operationalreadypresent                                          = Intervención ya presente
+angal.operation.operationcontext                                                 = Contexto
 angal.operation.operationsbrowser                                                = Lista Intervenciones
 angal.operation.pleaseinsertacode                                                = Por favor digitar un código
 angal.operation.pleaseinsertavaliddescription                                    = Por favor digitar una descripción válida
