--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -1195,6 +1195,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = Jina
 angal.operation.newoperationrecord                                               = Rekodi ya upasuaji mpya
 angal.operation.operationalreadypresent                                          = Upasuaji tayari unaendelea
+angal.operation.operationcontext                                                 = Mazingira
 angal.operation.operationsbrowser                                                = Kupitiapitia upasuaji
 angal.operation.pleaseinsertacode                                                = Tafadhali weka ishara
 angal.operation.pleaseinsertavaliddescription                                    = Tafadhali weka maelezo sahihi
