--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -194,11 +194,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = sera supprimè et son/sienne histoire transferè au Patient
 angal.admission.withthisoperationthepatient                                      = avec cette operation le Patient
 angal.admission.youareeditinganoldadmission                                      = Tu vais modifié un ancien hospitalisation
-angal.admission.check.operationdate                                               = Vérifier les dates des opérations
-angal.admission.invalidoperationdate                                             = Date d'opération non valide:
-angal.admission.theoperationdatebetween                                          = la date de l'opération doit être comprise entre
-angal.admission.theoperationdatenewerthan                                        = la date de l'opération doit être plus récente que
-angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation
 angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation 
 angal.admtype.codemaxchars                                                       = Code (max 10 caractère)
 angal.admtype.codetoolongmaxchars                                                = Code trop long (max 10 caractère)
@@ -1205,6 +1200,7 @@ angal.operation.minor                                                           
 angal.operation.namem                                                            = NOM
 angal.operation.newoperationrecord                                               = Nouvelle voix d'intervention
 angal.operation.operationalreadypresent                                          = Intervention déjé présente
+angal.operation.operationcontext                                                 = Contexte
 angal.operation.operationsbrowser                                                = Liste Interventions
 angal.operation.pleaseinsertacode                                                = Insérez un code
 angal.operation.pleaseinsertavaliddescription                                    = Insérez une description valide
