review 2nd pull request review

--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -492,6 +492,7 @@ angal.lab.pleaseselectapatient                                                  
 angal.lab.positive                                                               = Positive
 angal.lab.printreport                                                            = Print report
 angal.lab.printtable                                                             = Print table
+angal.lab.print                                                                  = Print
 angal.lab.reactive                                                               = Reactive
 angal.lab.registationdate                                                        = Registation date
 angal.lab.result                                                                 = Result
