provides more understandable, localized, set of values for operation results

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1168,6 +1168,9 @@ angal.operation.selecttype                                                      
 angal.operation.type                                                             = Type
 angal.operation.typem                                                            = TYPE
 angal.operationrowedit.cancel                                                    = Cancel
+angal.operation.result.sucess                                                    = Success
+angal.operation.result.failure                                                   = Failure
+angal.operation.result.undefined                                                 = Unknown
 angal.operationrowedit.new                                                       = New
 angal.operationrowedit.operation                                                 = Operation
 angal.operationrowedit.remark                                                    = Remarks
