--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1041,6 +1041,9 @@ angal.operation.select                                                          
 angal.operation.selecttype                                                       = Sélectionnez typologie
 angal.operation.type                                                             = Typologie
 angal.operation.typem                                                            = TYPOLOGIE
+angal.operation.result.sucess                                                    = Succès
+angal.operation.result.failure                                                   = Échec
+angal.operation.result.undefined                                                 = Indéterminé
 angal.operationrowedit.cancel                                                    = Fermer
 angal.operationrowedit.new                                                       = Nouveau\	
 angal.operationrowedit.operation                                                 = Opération:
