--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1162,6 +1162,9 @@ angal.operation.select                                                          
 angal.operation.selecttype                                                       = Seleziona Tipologia
 angal.operation.type                                                             = Tipologia
 angal.operation.typem                                                            = TIPOLOGIA
+angal.operation.result.sucess                                                    = Successo
+angal.operation.result.failure                                                   = Fallimento
+angal.operation.result.undefined                                                 = Incerto
 angal.operationrowedit.cancel                                                    = Annulla
 angal.operationrowedit.new                                                       = Nuovo
 angal.operationrowedit.operation                                                 = Interventi
