--- a/rpt/ProductLedger_es.properties
+++ b/rpt/ProductLedger_es.properties
@@ -3,7 +3,7 @@
 
 Balance = Saldo
 
-ClosingBalance = Cantidad de stock al final del período
+ClosingBalance = Cantidad final
 
 Curr. = Divisa
 
@@ -31,7 +31,7 @@ Mov.Type = Tipo Movimiento
 
 of = de
 
-OpeningBalance = Balance de Apertura
+OpeningBalance = Apertura
 
 Orig.Dest. = Origen/Destino
 
