--- a/rpt/ProductLedger_it.properties
+++ b/rpt/ProductLedger_it.properties
@@ -3,7 +3,7 @@
 
 Balance = Saldo
 
-ClosingBalance = Quantità alla fine del periodo
+ClosingBalance = Quantità finale
 
 Curr. = Valuta
 
@@ -31,7 +31,7 @@ Mov.Type = Tipo mov.
 
 of = di
 
-OpeningBalance = Saldo iniziale
+OpeningBalance = Apertura
 
 Orig.Dest. = Orig./Dest.
 
